# BFF

./: Dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  errors.py  security.py
app/db/: supabase_client.py
app/models/: auth.py  clients.py  tasks.py
app/routers/: __init__.py  auth.py  clients.py  tasks.py
app/services/: auth_service.py  clients_service.py  tasks_service.py
migrations/: 001_init.sql
tests/: conftest.py  test_auth.py  test_clients.py  test_config.py  test_cors.py  test_tasks.py
tools/: verify_schema.py
